Terminado servicio personas + test